fix: remove gradient (clipping at top on mobile) + animation first section on mobile (amount lowered to 30%)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,12 +7,6 @@ body {
     overflow-x: hidden;
 }
 
-.mobile-gradient {
-    filter: blur(86px);
-    background-image: linear-gradient(rgb(214, 214, 214), #d4d4d4);
-    border-radius: 81% 70% 70% 30% / 30% 105% 70% 70%;
-}
-
 @layer base {
     :root {
         --radius: 0.5rem;
